[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "explain-commits"
description = "A tool to explain Git commits using AI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/endolith/explain-commits"
"Bug Tracker" = "https://github.com/endolith/explain-commits/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
packages = ["explain_commits"]

[project.scripts]
explain-commits = "explain_commits.explain_commits:main"

[tool.setuptools_scm]
